--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,10 +1,9 @@
 body {
-  font-family: "Geomanist Book", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
-    "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
   font-size: 16px;
-  background: linear-gradient(rgba(243, 246, 249, 0.5), rgba(243, 246, 249, 0.5)),
-    url("https://www.ervandra.com/wp-content/uploads/2021/03/BG-Blueprint-1-pichi.png");
-  color: #333;
+  background: linear-gradient(rgba(243, 246, 249, 0.5), rgba(243, 246, 249, 0.5)), url("/images/bg.jpg");
+  color: #111;
   line-height: 1.5;
   font-smooth: auto;
   -webkit-font-smoothing: antialiased;
@@ -19,8 +18,8 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Geomanist Book", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
-    "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
   line-height: 1.3;
 }
 
