--- a/styles/app.scss
+++ b/styles/app.scss
@@ -62,11 +62,17 @@ img {
 #hero {
   h1 {
     // font-size: clamp(2rem, 7vmin, 4rem);
-    font-family: "Geomanist Regular", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+    font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
       "Open Sans", "Helvetica Neue", sans-serif;
     strong {
-      font-family: "Geomanist Black", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+      font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
         "Open Sans", "Helvetica Neue", sans-serif;
     }
+  }
+}
+
+@media only print {
+  .shadow {
+    box-shadow: none !important;
   }
 }
