--- a/styles/app.scss
+++ b/styles/app.scss
@@ -2,7 +2,12 @@ body {
   font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
     "Helvetica Neue", sans-serif;
   font-size: 16px;
-  background: linear-gradient(rgba(243, 246, 249, 0.5), rgba(243, 246, 249, 0.5)), url("/images/bg.jpg");
+  // background: linear-gradient(rgba(243, 246, 249, 0.5), rgba(243, 246, 249, 0.5)), url(/images/bg-grid.webp);
+  background-image: linear-gradient(rgba(243, 246, 249, 0.5), rgba(243, 246, 249, 0.5)), url(/images/bg.jpg),
+    url(/images/bg-dust.webp);
+  background-size: 1200px, 1200px, cover, 200px;
+  background-position: 0 0, 100% 100%, 50%;
+  background-attachment: fixed, scroll, scroll;
   color: #111;
   line-height: 1.5;
   font-smooth: auto;
@@ -75,4 +80,19 @@ img {
   .shadow {
     box-shadow: none !important;
   }
+}
+
+.bg-crown-dark {
+  background-color: #212529ee;
+  background-image: url(/images/crown-media.png.webp);
+  background-repeat: no-repeat;
+  background-size: 30vw;
+  background-position: right center;
+  background-attachment: fixed;
+}
+.bg-crown-light {
+  background-image: url(/images/crown-pencil.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
